@@ -1,3 +1,9 @@
+2015-02-06  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* nasl/nasl_ssh.c (nasl_ssh_userauth): Refactor code. Always try to get
+	the private key and keep support for empty passwords.  Based on patch by
+	Michel Pelletier.
+
 2015-02-04  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* nasl/nasl_packet_forgery.c (pseudo_udp_hdr): Add an extra byte for
